Added audio button

--- a/UI/adminScreen.html
+++ b/UI/adminScreen.html
@@ -49,6 +49,7 @@ Monitoring System
                 <div class="row">
                     <div class="col offset-l5">
                         <a class="waves-effect waves-light btn-large centered" onclick="pyCam()">Capture with Camera</a>
+                        <a class="waves-effect waves-light btn-large centered" style="margin-left:10px;" onclick="startAudioCapture()">Start Audio Capture</a>
                     </div>
                 </div>
             </div>
